--- a/src/ex1-directive-and-componet.html
+++ b/src/ex1-directive-and-componet.html
@@ -99,8 +99,7 @@
       message:'hello Vue.js'
     }
   });
-  // vue component
-  // todo-item 이름을 가진 컴포넌트를 정의
+  // vue component : todo-item 이름을 가진 컴포넌트를 정의
   Vue.component('todo-item', {
     props:['todo'],
     template:'<li>{{todo.text}}</li>'
