--- a/src/basic/ex0-directive-and-componet.html
+++ b/src/basic/ex0-directive-and-componet.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 <body>
 <div id="app">
@@ -47,6 +46,8 @@
 
     </ol>
 </div>
+<script src="https://unpkg.com/vue@2.3.3"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/vue"></script>-->
 <script>
   //vue hello world
   var app = new Vue({
