--- a/src/basic/examples/#2_props/index.html
+++ b/src/basic/examples/#2_props/index.html
@@ -9,7 +9,8 @@
     <div id="app">
       <!-- passedData (props) equals to be passed-data  -->
       <!-- read the bind property from right to left (from bottom to top in app.js)-->
-      <child-component v-bind:passed-data="message"></child-component>
+      <child-component v-bind:passed-data="message" v-bind:passed-data2="message2"></child-component>
+      <child-component2 v-bind:passed-data2="message2"></child-component2>
 
       <!-- #할일 3 -->
       <!-- sibling-component 등록 -->
