[update] ex - examples added
#4 , #5 routers

--- a/src/basic/examples/#4_basic-routers/index.html
+++ b/src/basic/examples/#4_basic-routers/index.html
@@ -15,8 +15,8 @@
       <router-view></router-view>
     </div>
 
-    <script src="js/vendor/vue.js"></script>
-    <script src="js/vendor/vue-router.js"></script>
+    <script src="../vendor/vue.js"></script>
+    <script src="../vendor/vue-router.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
